# EasyUC

./: .gitignore  DiffieHellmanUC.ec  README.md
common/: MakeRFExamp.ec  README.md  UCBasicTypes.ec  UCComposition.ec  UCComposition.eca  UCCore.ec  UCEncoding.ec  UCListAux.ec  UCListPO.ec  UCUniv.ec  WF.ec  check-all-scripts
nesvd-2017/: README.txt
old/: README.md
smc/: Aux.ec  DDH.ec  FSetAux.ec  Forward.ec  KeyExchange.ec  ListPO.ec  README.md  RedundantHashing.eca  SMC.ec  UCCore.eca  UCCoreDiffieHellman.ec
smc-next/: .dir-locals.el  DDH.ec  DiffieHellman.ec  Encoding.ec  Forward.ec  Forwarding.ec  Forwarding.eca  Forwarding_Code.eca  KeyExchange.ec  KeyExchange.eca  KeyExchange_Code.eca  KeysExponentsAndPlainTexts.ec  ListAux.ec  ListPO.ec  README.md  RedundantHashing.eca  UCCore.ec  UCCore.eca  UCCoreDiffieHellman.ec  UC_Forwarding.eca  UC_KeyExchange.eca  UC__Forwarding.eca  UC__KeyExchange.eca  Union.ec  check-all-scripts
uc-dsl/: .gitignore  .merlin  (+14 more)
uc-dsl/ucdsl-proj/: .gitignore  README.md  dune  dune-project  ec-update  ucdsl.opam
uc-dsl/ucdsl-proj/libs/lospecs/: dune
uc-dsl/ucdsl-proj/mini-interpretoid-PG-shell/: readme.txt
uc-dsl/ucdsl-proj/mini-interpretoid-PG-shell/myassistant/: demo.myasst  myassistant.el
uc-dsl/ucdsl-proj/mini-interpretoid-PG-shell/myassistant/myasscode/: myassist.ml
uc-dsl/ucdsl-proj/saved-easycrypt-api/: README  update-saved-ec-api
uc-dsl/ucdsl-proj/src/: README.md  UcGenerateInter.ml  dune  ec-diff  ecCommands.ml  ecCommands.mli  ecScope.ml  ecScope.mli  test0_of_InterpreterUserInputParsing.ml  test0_of_UcEcFormEval.ml  test0_of_UcInterpreter.ml  test1_of_UcEcFormEval.ec  test1_of_UcEcFormEval.ml  ucConfig.ml.in  ucEasyCryptCommentMacros.ml  ucEasyCryptCommentMacros.mli  ucEasyCryptCommentMacrosTest.ml  ucEcFormEval.ml  ucEcFormEval.mli  ucEcHypothesisSerialization.ml  ucEcHypothesisSerialization.mli  ucEcInterface.ml  ucEcInterface.mli  ucGenCore.ml  ucGenEcInterface.ml  ucGenerateCommon.ml  ucGenerateEcFile.ml  ucGenerateEcFile.mli  ucGenerateFunctionality.ml  ucGenerateInter.ml  ucInterpreter.el  ucInterpreter.ml  ucInterpreter.mli  ucInterpreterClient.ml  ucInterpreterClient.mli  ucLexer.mll  ucMessage.ml  ucMessage.mli  ucParseAndTypecheckFile.ml  ucParseAndTypecheckFile.mli  (+23 more)
uc-dsl/ucdsl-proj/src/ECsrc/: dune  ecCoreFol.ml  ecCoreFol.mli  ecEnv.ml  ecIo.ml  ecIo.mli  ecParser.mly  ecPrinting.ml  ecScope.ml  ecScope.mli  ecThCloning.ml  ecTheoryReplay.ml  ecUcCommonParsetree.ml
(+2241 files in other folders)
