(dirs ECsrc)
(include_subdirs unqualified)

(env
 (dev     (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-27-32-58-67-69))
 (release (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-27-32-58-67-69)
          (ocamlopt_flags -O3 -unbox-closures)))

(executables
 (names ucdsl test0_of_UcEcFormEval test1_of_UcEcFormEval ucInterpreterClient test0_of_InterpreterUserInputParsing test0_of_UcInterpreter)
 (modes byte exe)
 (libraries batteries camlp-streams dune-build-info inifiles why3 yojson zarith)
 (instrumentation (backend bisect_ppx --bisect-silent yes)))

(ocamllex ucLexer)

(menhir
  (modules ucParser)
  (flags --explain --dump)
  (infer true)
)
