(dirs ECsrc)
(include_subdirs unqualified)

(env
 (dev     (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-27-32-37-58-67-69))
 (release (flags :standard -rectypes -warn-error -a+31 -w +28+33-9-23-27-32-37-58-67-69)
          (ocamlopt_flags -O3 -unbox-closures)))

(executables
 (names ucdsl ucInterpreterClient)
 (modes exe)
 (libraries batteries camlp-streams dune-build-info inifiles why3 yojson zarith)
 (foreign_stubs (language c) (names eunix))
 (instrumentation (backend bisect_ppx --bisect-silent yes)))

(ocamllex ucLexer)

(menhir
  (modules ucParser)
  (explain true)
  (flags --table))
