(dirs ECsrc)
(include_subdirs unqualified)

(env
 (_ (flags :standard -rectypes -w @1..3@5..28@31..39@43@46..47@49..57@61..62-40-9-23-32-67-69 -warn-error -a+31)
    (ocamlopt_flags -O3 -unbox-closures)))

(executables
 (names ucdsl ucEasyCryptCommentMacrosTest)
 (modes exe)
 (libraries batteries camlp-streams dune-build-info dune-site inifiles pcre2 why3 yojson zarith)
 (foreign_stubs (language c) (names eunix))
 (instrumentation (backend bisect_ppx --bisect-silent yes)))

(ocamllex ucLexer)

(menhir
  (modules ucParser)
  (explain true)
  (flags --table))
